Active cases added

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -10,12 +10,16 @@
     border-bottom: 10px solid rgba(0,0,255,0.5);
 }
 
+.active{
+    border-bottom: 10px solid rgba(255,0,0,0.2);
+}
+
 .recoverd{
     border-bottom: 10px solid rgba(0,255,0,0.5);
 }
 
 .deaths{
-    border-bottom: 10px solid rgba(255,0,0,0.5);
+    border-bottom: 10px solid rgba(255,0,0,1);
 }
 
 @media(max-width: 770px){
